--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,11 +1,2 @@
-# General Apache options
-AddHandler fcgid-script .fcgi
-
-RewriteEngine On
-
-RewriteRule ^$ index.html [QSA]
-RewriteRule ^([^.]+)/!$ $1.html [QSA]
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ dispatch.fcgi [QSA,L]
-
-ErrorDocument 500 "<h2>Application error</h2>Application failed to start properly"
+PassengerEnabled On
+PassengerAppRoot /home/jujudell/apps/parano/current
